doubleclick = open profile, closed #1.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@ html, body {
   top: 4px;
 }
 
+.help {
+  position: absolute;
+  left: 4px;
+  bottom: 4px;
+}
+
 .hide {
   display: none;
 }
@@ -27,5 +33,6 @@ html, body {
 <body>
 <div id="display"></div>
 <div id="working" class="hide">Working...</div>
+<div class="help">Click to expand and double click to open profile.</div>
 <script src="js/app.js"></script>
 </body>
