make physics stable.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ html, body {
 <div id="display"></div>
 <div id="working" class="hide">Working...</div>
 <div class="help">
-<div><span class="key">Right Click</span> to expand (draw friends).</div>
+<div><span class="key">Left Click</span> to select.</div>
+<div><span class="key">Right Click</span> when selected to expand (draw friends).</div>
 <div><span class="key">Double click</span> to open profile.</div>
 <div><span class="key">Enter</span> to add users.</div>
 </div>
